@@ -1,6 +1,7 @@
 * Mon Aug 27 2007 Jesse Keating <jkeating@redhat.com>
 - Set up arch in __init__.py as it's needed for logging
 - Add support for $releasever in repo uris.
+- Set arch using rpmUtils, and do it in /usr/bin/pungi
 
 * Sun Aug 26 2007 Jesse Keating <jkeating@redhat.com>
 - Add better support for %packages syntax using native pykickstart
